--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -142,6 +142,7 @@ padding:50px;
 -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+}
 
 .info {
 margin:auto;
