--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -25,9 +25,11 @@
                     <img class="info" src="{{ asset_url }}">
                     {% endimage %}
                 </span>
-                <label for="registry_id"><b>Unique Dataset Identifier (UDI): </b></label>
-                <input type="text" id="registry_id" name="registry_id" size="60">
-                <button disabled name="regbutton" id="regbutton" type="button">Load Dataset</button>
+                <form id="regidform">
+                    <label for="registry_id"><b>Unique Dataset Identifier (UDI): </b></label>
+                    <input minlength="15" type="text" id="registry_id" name="registry_id" size="60">
+                    <button disabled name="regbutton" id="regbutton" type="button">Load Dataset</button>
+                </form>
             </fieldset>
         </p>
     {{ form_start(form) }}
@@ -137,9 +139,9 @@
 
         <div style="background: transparent;" id="tabs">
             <ul>
-                <li><a value="upload" href="#tabs-1">Direct Upload</a></li>
-                <li><a value="SFTP" href="#tabs-2">Upload via SFTP/GridFTP</a></li>
-                <li><a value="HTTP" href="#tabs-3">Request Pull from HTTP/FTP Server</a></li>
+                <li value="upload"><a href="#tabs-1">Direct Upload</a></li>
+                <li value="SFTP"><a href="#tabs-2">Upload via SFTP/GridFTP</a></li>
+                <li value="HTTP"><a href="#tabs-3">Request Pull from HTTP/FTP Server</a></li>
                 <li><a href="#tabs-4">ERDDAP</a></li>
                 <li><a href="#tabs-5">TDS</a></li>
                 <li><a href="#tabs-6">...</a></li>
@@ -283,8 +285,8 @@
                                     {% endfor %}
                                 </td>
                                 <td valign="top">
-                                    <button style="width:100px" type="button">Weekends</button><br \>
-                                    <button style="width:100px" type="button">Workdays</button>
+                                    <button id="btnWeekends" style="width:100px" type="button">Weekends</button><br \>
+                                    <button id="btnWorkdays" style="width:100px" type="button">Workdays</button>
                                 </td>
                             </tr>
                         </table>
@@ -317,9 +319,9 @@
 
         <div style="background: transparent;" id="md-tabs">
             <ul>
-                <li><a value="upload" href="#md-tabs-1">Direct Upload</a></li>
-                <li><a value="SFTP" href="#md-tabs-2">Upload via SFTP/GridFTP</a></li>
-                <li><a value="HTTP" href="#md-tabs-3">Pull from HTTP/FTP Server</a></li>
+                <li value="upload"><a href="#md-tabs-1">Direct Upload</a></li>
+                <li value="SFTP"><a href="#md-tabs-2">Upload via SFTP/GridFTP</a></li>
+                <li value="HTTP"><a href="#md-tabs-3">Pull from HTTP/FTP Server</a></li>
                 <li><a href="#md-tabs-4">ERDDAP</a></li>
                 <li><a href="#md-tabs-5">TDS</a></li>
                 <li><a href="#md-tabs-6">...</a></li>
@@ -415,8 +417,8 @@
     <input type="hidden" name="urlvalidate" id="urlvalidate"/>
     <input type="hidden" name="access_period_weekdays" id="weekdayslst"/>
     <input type="hidden" name="timezone" id="timezone"/>
-    <input type="hidden" name="data_server_type" id="servertype">
-    <input type="hidden" name="metadata_server_type" id="md_servertype">
+    {{ form_widget(form.datasetFileTransferType) }}
+    {{ form_widget(form.metadataFileTransferType) }}
 
     <br>
     <div style="text-align:center;">
