Modification to allow for handle by regid.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -32,7 +32,7 @@
                 </form>
             </fieldset>
         </p>
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
         <input type="hidden" id="task" name="task">
 
         <p> <!-- Dataset Title -->
