--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
@@ -13,8 +13,8 @@
             </td>
             <td>
                 <h2>
-                    <a href="{{ path('pelagos_app_ui_datasetsubmission_default') }}?regid={{ DatasetSubmission.datasetSubmissionId }}">
-                        {{ DatasetSubmission.datasetSubmissionId }}
+                    <a href="{{ path('pelagos_app_ui_datasetsubmission_default') }}?regid={{ DatasetSubmission.getDataset.getUdi }}">
+                        {{ DatasetSubmission.getDataset.getUdi }}
                     </a>
                 </h2>
             </td>
