--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -51,6 +51,21 @@
 
 
 {% block body %}
+{% if found %}
+
+    <div class="messages status">
+        <h2 class="element-invisible">Status message</h2>
+        Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
+    </div>
+
+{% else %}
+    <div class="messages warning">
+        <h2 class="element-invisible">Status message</h2>
+        Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+    </div>
+{% endif %}
+
+
 <table border="0" style="height:100%;width:100%;">
     <tr>
         <td width="60%" style="vertical-align: top; background: transparent;">
