--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -27,7 +27,7 @@
                 </span>
                 <form id="regidform">
                     <label for="registry_id"><b>Unique Dataset Identifier (UDI): </b></label>
-                    <input minlength="15" type="text" id="registry_id" name="registry_id" size="60" value="{{ udi }}">
+                    <input minlength="15" type="text" id="registry_id" name="registry_id" size="60" value="{{datasetSubmission.getDatasetSubmissionId|default}}">
                     <button disabled 
                     onclick="window.location.href='{{ path('pelagos_app_ui_datasetsubmission_default') }}?regid=' + 
                     document.getElementById('registry_id').value;"
