--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -51,14 +51,14 @@
 
 
 {% block body %}
-{% if found %}
+{% if found and udi != '' %}
 
     <div class="messages status">
         <h2 class="element-invisible">Status message</h2>
         Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
     </div>
 
-{% else %}
+{% elseif udi != '' %}
     <div class="messages warning">
         <h2 class="element-invisible">Status message</h2>
         Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
