--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
@@ -35,7 +35,7 @@
 ></div>
 
 <table style="height:100%;width:100%;">
-    {% if true %} {# admin #}
+    {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
     <tr>
         <td>
             <table class="cleair" style="width:100%;">
@@ -45,7 +45,10 @@
                             <form id="filter" name="filter">
                                 <label for="filtername">Filter by Researcher:</label>
                                 <select id="filtername" style="width:100%">
-                                    <option>list of something here</option>
+                                    <option value="">[Show ALL]</option>
+                                    {% for person in researchers|sort %}
+                                        <option>{{person.getLastName}}, {{person.getFirstName}} &lt;{{person.getEmailAddress}}&gt;</option>
+                                    {% endfor %}
                                 </select>
                                 <label for="filterstatus">Filter by Status:</label>
                                 <select id="filterstatus" style="width:100%">
@@ -74,7 +77,7 @@
                     <tr>
                         <td>
                             <h2 class="title" align="center">
-                                Projects and datasets for {{ firstName|default + ' ' + lastName|default }}
+                                Projects and datasets for {{ loggedInPerson.getFirstName|default }} {{loggedInPerson.lastName|default }}
                                 <hr>
                             </h2>
                         </td>
@@ -116,13 +119,13 @@
                                         );
                                         nodecount++;
 
-                                        {% for reg in regs %}
+                                        {% for dataset in datasetSubmissions %}
                                             d.add(
                                                 nodecount,
                                                 folderCount,
-                                                '[{{reg.getDatasetSubmissionId}}] {{reg.getTitle}}',
-                                                '?regid={{reg.getDatasetSubmissionId}}',
-                                                '[{{reg.getDatasetSubmissionId}}] {{reg.getTitle}}',
+                                                '[{{dataset.getUdi}}] {{dataset.getTitle}}',
+                                                '?regid={{dataset.getDatasetSubmission.getDatasetSubmissionId|default}}',
+                                                '[{{dataset.getUdi}}] {{dataset.getTitle}}',
                                                 '_self',
                                                 green
                                             );
@@ -141,13 +144,13 @@
 
                                         folderCount = nodecount;
 
-                                        {% for rgrp in rgrps %}
+                                        {% for researchGroup in researchGroups %}
                                             d.add(
                                                 nodecount,
                                                 dsnode,
-                                                '{{rgrp.getName}}',
+                                                '{{researchGroup.getName}}',
                                                 'javascript: d.o('+nodecount+');',
-                                                '{{rgrp.getName}}',
+                                                '{{researchGroup.getName}}',
                                                 '',
                                                 '',
                                                 '',
@@ -156,17 +159,19 @@
                                             nodecount++;
 
                                             //Another for loop here for datasets
-                                            {% for dataset in rgrp.getDatasets %}
-                                                d.add(
-                                                    nodecount,
-                                                    folderCount,
-                                                    '[{{dataset.getUdi}}] {{dataset.getTitle}}',
-                                                    '?regid={{dataset.getUdi}}',
-                                                    '[{{dataset.getUdi}}] {{dataset.getTitle}}',
-                                                    '_self',
-                                                    green
-                                                );
-                                                nodecount++;
+                                            {% for dataset in researchGroup.getDatasets %}
+                                                if ({{dataset.getDif.getStatus}} == '2') {
+                                                    d.add(
+                                                        nodecount,
+                                                        folderCount,
+                                                        '[{{dataset.getUdi}}] {{dataset.getTitle}}',
+                                                        '?uid={{dataset.getDif.getId}}',
+                                                        '[{{dataset.getUdi}}] {{dataset.getTitle}}',
+                                                        '_self',
+                                                        green
+                                                    );
+                                                    nodecount++;
+                                                }
                                             {% endfor %}
                                             folderCount = nodecount;
                                         {% endfor %}
