--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -1,3 +1,4 @@
+
 .emRequired::before {
     font-weight: bold; color:#FF0000;
     content:"*";
@@ -33,6 +34,10 @@ label {
 legend.section-header {
     font-size: 130%;
     font-weight: bold;
+}
+
+.submitButton {
+    font-size:120%; font-weight:bold;
 }
 
 
