Setting the reg id in tree list, instead of just udi.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
@@ -123,9 +123,9 @@
                                             d.add(
                                                 nodecount,
                                                 folderCount,
-                                                '[{{dataset.getUdi}}] {{dataset.getTitle}}',
+                                                '[{{dataset.getDatasetSubmission.getDatasetSubmissionId}}] {{dataset.getTitle}}',
                                                 '?regid={{dataset.getDatasetSubmission.getDatasetSubmissionId|default}}',
-                                                '[{{dataset.getUdi}}] {{dataset.getTitle}}',
+                                                '[{{dataset.getDatasetSubmission.getDatasetSubmissionId}}] {{dataset.getTitle}}',
                                                 '_self',
                                                 green
                                             );
