--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -43,6 +43,14 @@
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
+    {% stylesheets '@PelagosAppBundle/Resources/public/css/fileBrowser.css' %}
+        {{ add_css(asset_url) }}
+    {% endstylesheets  %}
+
+    {% javascripts '@PelagosAppBundle/Resources/public/js/fileBrowser.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
     {% javascripts '@PelagosAppBundle/Resources/public/js/registry.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
