Switched to using FOSJsRouting for incoming directory API route.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -54,7 +54,13 @@
     {% javascripts '@PelagosAppBundle/Resources/public/js/registry.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
-   
+
+    {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
+    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+
 {% endblock %}
 
 
