Fixed subject for updated DM email. Some docblock stuff.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-managers.dataset-updated.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-managers.dataset-updated.email.twig
@@ -1,4 +1,4 @@
-{% block subject 'GRIIDC Dataset Registration Submitted' %}
+{% block subject 'GRIIDC Dataset Registration Updated' %}
 
 {% block body_html %}
     Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br>
