--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -177,17 +177,17 @@
             <div id="tabs-2"> <!-- Upload via SFTP/GridFTP -->
                 Use this method when the dataset is &gt;1GB and you wish to upload the dataset file to GRIIDC (rather than place the dataset file on an HTTP (web) or FTP server and have GRIIDC pull it).
                 <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded the file via SFTP or GridFTP.</em>
-                {% if sftpuser|default %}
-                <div style="color:red;">
-                    Your account has not been configured for SFTP/GridFTP access.<br>
-                    If you wish to use SFTP/GridFTP, please contact <a href="mailto:griidc@gomri.org">griidc@gomri.org</a> to request SFTP/GridFTP access.
+                <div id=sftpSection sftpuser={{ sftpuser }}>
+                    <div id="sftpYes" style="color:black;">
+                        Your account has been configured for SFTP/GridFTP access.
+                        Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.
+                    </div>
+                    <div id="sftpNo" style="color:red;">
+                        Your account has not been configured for SFTP/GridFTP access.
+                        If you wish to use SFTP/GridFTP, please click here to request SFTP/GridFTP access:
+                        <BUTTON id=sftpButton sftpPath={{ path('pelagos_app_ui_account_makeposix') }}>REQUEST SFTP/GridFTP</button>
+                    </div>
                 </div>
-                {% elseif sftpdir|default %}
-                <div style="color:red;">
-                    Your SFTP/GridFTP directory has not been set up.<br>
-                    Please contact <a href="mailto:griidc@gomri.org">griidc@gomri.org</a> for assistance.
-                </div>
-                {% endif %}
                 <fieldset>
                     <p>
                         <span id="qtip_sshdataurl" style="float:right;">
