--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -175,21 +175,22 @@
             </div> <!-- tabs-1 -->
 
             <div id="tabs-2"> <!-- Upload via SFTP/GridFTP -->
-                Use this method when the dataset is &gt;1GB and you wish to upload the dataset file to GRIIDC (rather than place the dataset file on an HTTP (web) or FTP server and have GRIIDC pull it).
-                <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded the file via SFTP or GridFTP.</em>
+                <p>Use this method when the dataset is &gt;1GB and you wish to upload the dataset file to GRIIDC (rather than place the dataset file on an HTTP (web) or FTP server and have GRIIDC pull it).
+                <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded the file via SFTP or GridFTP.</em></p>
                 <div id=sftpSection sftpuser={{ sftpuser }}>
-                    <div id="sftpYes" style="color:black;">
+                    <div class="sftpYes" style="color:black;">
                         Your account has been configured for SFTP/GridFTP access.
-                        Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.
+                        Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.</p>
                     </div>
-                    <div id="sftpNo" style="color:red;">
+                    <div class="sftpNo" style="color:red;">
+                        <p>
                         Your account has not been configured for SFTP/GridFTP access.
                         If you wish to use SFTP/GridFTP, please click here to request SFTP/GridFTP access:
-                        <BUTTON id=sftpButton sftpPath={{ path('pelagos_app_ui_account_makeposix') }}>REQUEST SFTP/GridFTP</button>
+                        <BUTTON id=sftpButton sftpPath={{ path('pelagos_app_ui_account_makeposix') }}>REQUEST SFTP/GridFTP</button></p>
                     </div>
                 </div>
                 <fieldset>
-                    <p>
+                    <br />
                         <span id="qtip_sshdataurl" style="float:right;">
                             {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
                             <img class="info" src="{{ asset_url }}">
@@ -205,7 +206,7 @@
                             <input type="checkbox" name="sftp_force_data_download">import this file again from the same path"
                             {% endif %}
                         </div>
-                    </p>
+                    <br />
                 </fieldset>
             </div> <!-- tabs-2 -->
 
@@ -356,19 +357,18 @@
             </div> <!-- md-tabs-1 -->
 
             <div id="md-tabs-2"> <!-- Upload via SFTP/GridFTP -->
-                You may use this method if you wish to upload the metadata file via SFTP/GridFTP (e.g. if you uploaded a metadata file alongside a data file that you uploaded using SFTP/GridFTP).
-                <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded your file via SFTP or GridFTP.</em>
-                    {% if sftpuser|default %}
-                    <div style="color:red;">
-                        Your account has not been configured for SFTP/GridFTP access.<br>
-                        If you wish to use SFTP/GridFTP, please contact <a href="mailto:griidc@gomri.org">griidc@gomri.org</a> to request SFTP/GridFTP access.
+                <p>You may use this method if you wish to upload the metadata file via SFTP/GridFTP (e.g. if you uploaded a metadata file alongside a data file that you uploaded using SFTP/GridFTP).
+                <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded your file via SFTP or GridFTP.</em></p>
+                <div id=mdSftpSection sftpuser={{ sftpuser }}>
+                    <div class="sftpYes" style="color:black;">
+                        <p>Your account has been configured for SFTP/GridFTP access.
+                        Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.</p>
                     </div>
-                    {% elseif sftpdir|default %}
-                    <div style="color:red;">
-                        Your SFTP/GridFTP directory has not been set up.<br>
-                        Please contact <a href="mailto:griidc@gomri.org">griidc@gomri.org</a> for assistance.
+                    <div class="sftpNo" style="color:red;">
+                        <p>Your account has not been configured for SFTP/GridFTP access.
+                        If you wish to use SFTP/GridFTP, use the "Request SFTP/GridFTP" button in the Dataset File section.</p>
                     </div>
-                    {% endif %}
+                </div>
                 <fieldset>
                     <br>
                         <span id="qtip_sshmetadataurl" style="float:right;">
